Fixed more alignment issues

--- a/swe-hub/src/index.css
+++ b/swe-hub/src/index.css
@@ -79,7 +79,7 @@ code {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 18px;
   margin: 4px 2px;
   border-radius: 20px;
   width: 200px;
@@ -115,6 +115,9 @@ code {
 .sign{
   margin-right: 120px;
 }
+ .signWel{
+  margin-right: 200px;
+} 
 
 
 @media (max-width: 700px) 
@@ -122,6 +125,14 @@ code {
     .sign
     {
         margin-right: 180px;
+    }
+}
+
+@media (max-width: 700px) 
+{
+    .signWel
+    {
+        margin-right: 150px;
     }
 }
 
@@ -150,7 +161,7 @@ code {
     }
 }
 
-@media (max-width: 780px) 
+@media (max-width: 820px) 
 {
     .photoSign
     {
